--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -21,7 +21,7 @@
                                 <img src="assets/images/logo-light.png" alt="" height="20">
                             </a>
                         </div>
-                        <p class="mt-3 fs-15 fw-medium">Premium Admin & Dashboard Template</p>
+                        <p class="mt-3 fs-15 fw-medium">Believe, Innovate & Elevate</p>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                         <div class="card-body p-4">
                             <div class="text-center mt-2">
                                 <h5 class="text-primary">Welcome Back !</h5>
-                                <p class="text-muted">Sign in to continue to Velzon.</p>
+                                <p class="text-muted">Sign in to continue.</p>
                             </div>
                             <div class="p-2 mt-4">
                                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -79,7 +79,7 @@
                                     </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-success w-100" type="submit">Sign In</button>
+                                        <button class="btn btn-primary w-100" type="submit">Sign In</button>
                                     </div>
 
                                     <div class="mt-4 text-center">
@@ -87,10 +87,7 @@
                                             <h5 class="fs-13 mb-4 title">Sign In with</h5>
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center">
-                                            <button type="button" class="btn btn-primary btn-icon waves-effect waves-light"><i class="ri-facebook-fill fs-16"></i></button>
-                                            <button type="button" class="btn btn-danger btn-icon waves-effect waves-light"><i class="ri-google-fill fs-16"></i></button>
-                                            <button type="button" class="btn btn-dark btn-icon waves-effect waves-light"><i class="ri-github-fill fs-16"></i></button>
-                                            <button type="button" class="btn btn-info btn-icon waves-effect waves-light"><i class="ri-twitter-fill fs-16"></i></button>
+                                            <button type="button" class="btn btn-success  btn-icon waves-effect waves-light"><i class="ri-whatsapp-fill fs-16"></i></button>
                                         </div>
                                     </div>
                                 </form>
@@ -118,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <p class="mb-0 text-muted">&copy; {{year}} Velzon. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                        <p class="mb-0 text-muted">&copy; {{year}} INSPIRE. Powered by ByteCreed</p>
                     </div>
                 </div>
             </div>
