--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -4,11 +4,11 @@
             <div class="col-sm-6">
                {{year}} © INSPIRE (v1.0.0)
             </div>
-            <div class="col-sm-6">
+            <!-- <div class="col-sm-6">
                 <div class="text-sm-end d-none d-sm-block">
-                    Powered by Byte Creed
+                    Powered by ByteCreed
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </footer>
