feat: Update login and register page copy

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -33,8 +33,8 @@
 
                         <div class="card-body p-4">
                             <div class="text-center mt-2">
-                                <h5 class="text-primary">Welcome Back !</h5>
-                                <p class="text-muted">Sign in to continue.</p>
+                                <h5 class="text-primary">Welcome Back</h5>
+                                <p class="text-muted">Sign in to continue</p>
                             </div>
                             <div class="p-2 mt-4">
                                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
