fix: Update register page terms of use copy

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -73,10 +73,8 @@
                                     </div>
 
                                     <div class="mb-4">
-                                        <p class="mb-0 fs-12 text-muted fst-italic">By registering you agree to the
-                                            INSPIRE <a href="javascript:void(0);"
-                                                class="text-primary text-decoration-underline fst-normal fw-medium">Terms
-                                                of Use</a></p>
+                                        <p class="mb-0 fs-12 text-muted">By registering you agree to our <a href="javascript:void(0);"
+                                                class="text-primary text-decoration-underline fst-normal fw-medium">Terms of Use</a></p>
                                     </div>
 
                                     <div class="mt-4">
