feat: Update topbar app icons
This commit updates the app icons in the topbar component to reflect school-related functionalities. The "Web Apps" section header is changed to "Apps". The icons and labels for GitHub, Bitbucket, Dribbble, Dropbox, Mail Chimp, and Slack are replaced with School, Student, Parent, Support, Profile, and Admin, respectively. This change aligns the topbar with the application's focus on school management features.

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -165,7 +165,7 @@
                         <div class="p-3 border-top-0 border-start-0 border-end-0 border-dashed border">
                             <div class="row align-items-center">
                                 <div class="col">
-                                    <h6 class="m-0 fw-semibold fs-15"> Web Apps </h6>
+                                    <h6 class="m-0 fw-semibold fs-15"> Apps </h6>
                                 </div>
                                 <div class="col-auto">
                                     <a href="javascript:void(0);" class="btn btn-sm btn-soft-info"> View All Apps
@@ -178,41 +178,40 @@
                             <div class="row g-0">
                                 <div class="col">
                                     <a class="dropdown-icon-item" href="javascript:void(0);">
-                                        <img src="assets/images/brands/github.png" alt="Github">
-                                        <span>GitHub</span>
+                                        <img src="assets/images/brands/school.png" alt="school">
+                                        <span>School</span>
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a class="dropdown-icon-item" href="javascript:void(0);">
-                                        <img src="assets/images/brands/bitbucket.png" alt="bitbucket">
-                                        <span>Bitbucket</span>
+                                        <img src="assets/images/brands/graduating-student.png" alt="student">
+                                        <span>Student</span>
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a class="dropdown-icon-item" href="javascript:void(0);">
-                                        <img src="assets/images/brands/dribbble.png" alt="dribbble">
-                                        <span>Dribbble</span>
+                                        <img src="assets/images/brands/family.png" alt="family">
+                                        <span>Parent</span>
                                     </a>
                                 </div>
                             </div>
-
-                            <div class="row g-0">
+                            <div class="row g-0">   
                                 <div class="col">
                                     <a class="dropdown-icon-item" href="javascript:void(0);">
-                                        <img src="assets/images/brands/dropbox.png" alt="dropbox">
-                                        <span>Dropbox</span>
+                                        <img src="assets/images/brands/customer-service.png" alt="support">
+                                        <span>Support</span>
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a class="dropdown-icon-item" href="javascript:void(0);">
-                                        <img src="assets/images/brands/mail_chimp.png" alt="mail_chimp">
-                                        <span>Mail Chimp</span>
+                                        <img src="assets/images/brands/business-man.png" alt="Profile">
+                                        <span>Profile</span>
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a class="dropdown-icon-item" href="javascript:void(0);">
-                                        <img src="assets/images/brands/slack.png" alt="slack">
-                                        <span>Slack</span>
+                                        <img src="assets/images/brands/system-administrator.png" alt="Admin">
+                                        <span>Admin</span>
                                     </a>
                                 </div>
                             </div>
