--- a/src/app/account/auth/errors/alt/alt.component.html
+++ b/src/app/account/auth/errors/alt/alt.component.html
@@ -12,7 +12,7 @@
                                 <lord-icon class="avatar-xl" src="https://cdn.lordicon.com/etwtznjn.json" trigger="loop" colors="primary:#405189,secondary:#0ab39c">
                                 </lord-icon>
                                 <h1 class="text-primary mb-4">Oops !</h1>
-                                <h4 class="text-uppercase">Sorry, Page not Found 😭</h4>
+                                <h4 class="text-uppercase">Sorry, Page not Found </h4>
                                 <p class="text-muted mb-4">The page you are looking for not available!</p>
                                 <a routerLink="" class="btn btn-success"><i class="mdi mdi-home me-1"></i>Back to home</a>
                             </div>
