--- a/src/app/account/auth/errors/basic/basic.component.html
+++ b/src/app/account/auth/errors/basic/basic.component.html
@@ -21,9 +21,9 @@
                         </div>
                         <div class="mt-n4">
                             <h1 class="display-1 fw-medium">404</h1>
-                            <h3 class="text-uppercase">Sorry, Page not Found 😭</h3>
-                            <p class="text-muted mb-4">The page you are looking for not available!</p>
-                            <a routerLink="" class="btn btn-success"><i class="mdi mdi-home me-1"></i>Back to home</a>
+                            <h3 class="text-uppercase">Sorry, Page not Found</h3>
+                            <p class="text-muted mb-4">The page you are looking for is not available!</p>
+                            <a routerLink="" class="btn btn-primary"><i class="mdi mdi-home me-1"></i>Back to home</a>
                         </div>
                     </div>
                 </div>
@@ -36,17 +36,17 @@
     <!-- end auth page content -->
 
     <!-- footer -->
-    <footer class="footer galaxy-border-none">
+    <!-- <footer class="footer galaxy-border-none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <p class="mb-0 text-muted">&copy; {{year}} Velzon. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                        <p class="mb-0 text-muted">&copy; {{year}} INSPIRE. Powered by ByteCreed</p>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- end Footer -->
 
 </div>
