--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -74,6 +74,15 @@
                                         <div class="invalid-feedback"> Please Enter Confirm Password </div>
                                     </div>
 
+                                    <div class="mb-2">
+                                        <label for="gender" class="form-label">Choose Gender <span class="text-danger">*</span></label>
+                                        <select id="gender" class="form-select" formControlName="gender" [ngClass]="{ 'is-invalid': submitted && f['gender'].errors }">
+                                          <option value="" disabled selected>Select </option>
+                                          <option *ngFor="let gender of genderOptions" [value]="gender.dataCode">{{ gender.text }}</option>
+                                        </select>
+                                        <div class="invalid-feedback">Please select gender</div>
+                                      </div>
+
                                     <div class="mb-4">
                                         <p class="mb-0 fs-12 text-muted text-center">By registering you agree to our <a href="javascript:void(0);"
                                                 class="text-primary text-decoration-underline fst-normal fw-medium">Terms and Conditions</a></p>
