--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -60,6 +60,7 @@
                                             [ngClass]="{ 'is-invalid': submitted && f['phone'].errors }">
                                         <div class="invalid-feedback"> Please Enter phone </div>
                                     </div>
+
                                     <div class="mb-3">
                                         <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
                                         <input type="password" class="form-control" id="password" placeholder="Enter Password" required formControlName="password"
@@ -81,16 +82,16 @@
                                           <span *ngIf="f['confirmPassword'].errors?.['required']">Please Enter Confirm Password</span>
                                           <span *ngIf="signupForm.errors?.['passwordMismatch']">Passwords do not match</span>
                                         </div>
-                                      </div>
+                                    </div>
 
                                     <div class="mb-2">
-                                        <label for="sex" class="form-label">Choose Gender <span class="text-danger">*</span></label>
+                                        <label for="sex" class="form-label">Gender <span class="text-danger">*</span></label>
                                         <select id="sex" class="form-select" formControlName="sex" [ngClass]="{ 'is-invalid': submitted && f['sex'].errors }">
                                           <option value="" disabled selected>Select </option>
                                           <option *ngFor="let sex of sexOptions" [value]="sex.dataCode">{{ sex.text }}</option>
                                         </select>
                                         <div class="invalid-feedback">Please select gender</div>
-                                      </div>
+                                    </div>
 
                                     <div class="mb-4">
                                         <p class="mb-0 fs-12 text-muted text-center">By registering you agree to our <a href="javascript:void(0);"
@@ -109,8 +110,7 @@
                     <!-- end card -->
 
                     <div class="mt-4 text-center">
-                        <p class="mb-0">Already have an account ? <a routerLink="/auth/login"
-                                class="fw-semibold text-primary text-decoration-underline"> Sign In </a> </p>
+                        <p class="mb-0">Already have an account ? <a routerLink="/auth/login" class="fw-semibold text-primary text-decoration-underline"> Sign In </a> </p>
                     </div>
 
                 </div>
