--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -75,7 +75,7 @@
                                     </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit">Sign In</button>
+                                        <button class="btn btn-primary w-100" type="submit" [disabled]="isLoading">Sign In</button>
                                     </div>
 
                                     <div class="mt-4 text-center">
@@ -87,6 +87,11 @@
                                         </div>
                                     </div>
                                 </form>
+                                <div id="elmLoader">
+                                    <div class="spinner-border text-primary avatar-sm" role="status">
+                                        <span class="visually-hidden">Loading...</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- end card body -->
@@ -120,4 +125,73 @@
     <!-- end Footer -->
 </div>
 <!-- end auth-page-wrapper -->
-<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
+<!-- <app-toasts aria-live="polite" aria-atomic="true"></app-toasts> -->
+
+<ng-template #selectInstitutionContent role="document" let-modal>
+    <div class="modal-header p-3 bg-info-subtle">
+        <h5 class="modal-title" id="exampleModalLabel">Select Institution</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')" ></button>
+    </div>
+    <div style="background-color: #F3F3F9; padding: 1rem;">
+        @for (institution of userInstitutions; track $index) {
+            <form   class="tablelist-form" autocomplete="off">
+                <div class="modal-body">
+                    <div class="col-md-6 col-lg-12">
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <div class="d-lg-flex align-items-center">
+                                    <div class="flex-shrink-0">
+                                         <div><a href="javascript:void(0);" class="btn btn-ghost-success btn-icon custom-toggle active" data-bs-toggle="button"></a></div>
+                                    </div>
+                                    <div class="ms-lg-3 my-3 my-lg-0">
+                                        <h5 class="fs-16 mb-2 text-break">{{institution.name}}</h5>
+                                        <p class="text-muted mb-0 text-break">{{institution.code}}</p>
+                                    </div>
+                                    <div class="d-flex gap-4 mt-0 text-muted mx-auto"></div>
+                                    <div class="d-flex gap-1 mt-0 "><a href="javascript:void(0);" class="btn btn-soft-primary w-100" (click)="onSelectInstitution(institution)">Select</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        }
+    </div>
+</ng-template>
+
+<ng-template #selectAppContent role="document" let-modal>
+    <div class="modal-header p-3 bg-info-subtle">
+        <h5 class="modal-title" id="exampleModalLabel">Select Application</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')" ></button>
+    </div>
+    <div style="background-color: #F3F3F9; padding: 1rem;">
+        <div class="p-2">
+            <div class="row g-4">
+                <div class="col-12 col-lg-6">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.School)" (click)="onSelectApp(ApplicationTypeEnum.School)">
+                        <img src="assets/images/brands/school.png" alt="school" class="me-2">
+                        <span>School</span>
+                    </button>
+                </div>
+                <div class="col-12 col-lg-6" >
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.Student)" (click)="onSelectApp(ApplicationTypeEnum.Student)">
+                        <img src="assets/images/brands/graduating-student.png" alt="student" class="me-2">
+                        <span>Student</span>
+                    </button>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.Parent)" (click)="onSelectApp(ApplicationTypeEnum.Parent)">
+                        <img src="assets/images/brands/family.png" alt="family" class="me-2">
+                        <span>Parent</span>
+                    </button>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.Admin)" (click)="onSelectApp(ApplicationTypeEnum.Admin)">
+                        <img src="assets/images/brands/system-administrator.png" alt="Admin" class="me-2">
+                        <span>Admin</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
