refactor: Migrate services to standalone and update imports
This commit refactors several services to be standalone and updates import paths to reflect the changes.

Key changes include:

-   Made `ApiHttpService`, `IdentityApiHttpService`, `LookUpService`, `LookUpApi`, `InstitutionService`, `UserService` standalone.
-   Updated import paths in `auth.interceptor.ts`, `jwt.interceptor.ts`, `error.interceptor.ts`, `topbar.component.ts`, `auth.guard.ts`, `account.module.ts`, `app.module.ts` and `register.component.ts` to reflect the new location of `TokenService`.
-   Updated models to use interfaces.
-   Updated `SimpleAlerts` to use `timer`
-   Updated `register.component.ts` to use `passwordMatchValidator`
-   Updated `register.component.ts` to use `Store`
-   Updated `login.component.ts` to use `Store`
-   Updated `login.component.html` to use `loading`

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -56,7 +56,7 @@
 
                                     <div class="mb-3">
                                         <label for="phone" class="form-label">Phone <span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number" required formControlName="phone"
+                                        <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number (+237000000000)" required formControlName="phone"
                                             [ngClass]="{ 'is-invalid': submitted && f['phone'].errors }">
                                         <div class="invalid-feedback"> Please Enter phone </div>
                                     </div>
@@ -68,12 +68,6 @@
                                         <div class="invalid-feedback"> Please Enter Password </div>
                                     </div>
 
-                                    <!-- <div class="mb-2">
-                                        <label for="confirmPassword" class="form-label">Confirm Password <span class="text-danger">*</span></label>
-                                        <input type="password" class="form-control" id="confirmPassword" placeholder="Enter password" required formControlName="confirmPassword"
-                                            [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }">
-                                        <div class="invalid-feedback"> Please Enter Confirm Password </div>
-                                    </div> -->
                                     <div class="mb-3">
                                         <label for="confirmPassword" class="form-label">Confirm Password <span class="text-danger">*</span></label>
                                         <input type="password" class="form-control" id="confirmPassword" placeholder="Enter password" required formControlName="confirmPassword"
@@ -99,10 +93,14 @@
                                     </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit">Sign Up</button>
+                                        <button class="btn btn-primary w-100" type="submit" [disabled]="loading$ | async">Sign Up</button>
                                     </div>
                                 </form>
-
+                                <div id="elmLoader" *ngIf="loading$ | async">
+                                    <div class="spinner-border text-primary avatar-sm" role="status">
+                                        <span class="visually-hidden">Loading...</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- end card body -->
