--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -75,7 +75,7 @@
                                     </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit" [disabled]="isLoading">Sign In</button>
+                                        <button class="btn btn-primary w-100" type="submit" [disabled]="loading">Sign In</button>
                                     </div>
 
                                     <div class="mt-4 text-center">
@@ -87,7 +87,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                <div id="elmLoader">
+                                <div id="elmLoader" *ngIf="loading">
                                     <div class="spinner-border text-primary avatar-sm" role="status">
                                         <span class="visually-hidden">Loading...</span>
                                     </div>
@@ -125,15 +125,14 @@
     <!-- end Footer -->
 </div>
 <!-- end auth-page-wrapper -->
-<!-- <app-toasts aria-live="polite" aria-atomic="true"></app-toasts> -->
 
 <ng-template #selectInstitutionContent role="document" let-modal>
     <div class="modal-header p-3 bg-info-subtle">
         <h5 class="modal-title" id="exampleModalLabel">Select Institution</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')" ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectInstitutionModal()" ></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
-        @for (institution of userInstitutions; track $index) {
+        @for (institution of institutions; track $index) {
             <form   class="tablelist-form" autocomplete="off">
                 <div class="modal-body">
                     <div class="col-md-6 col-lg-12">
@@ -162,31 +161,31 @@
 <ng-template #selectAppContent role="document" let-modal>
     <div class="modal-header p-3 bg-info-subtle">
         <h5 class="modal-title" id="exampleModalLabel">Select Application</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')" ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectApplicationModal()" ></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
         <div class="p-2">
-            <div class="row g-4">
+            <div class="row g-2">
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.School)" (click)="onSelectApp(ApplicationTypeEnum.School)">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.School)" (click)="onSelectApplication(ApplicationTypeEnum.School)">
                         <img src="assets/images/brands/school.png" alt="school" class="me-2">
                         <span>School</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6" >
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.Student)" (click)="onSelectApp(ApplicationTypeEnum.Student)">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Student)" (click)="onSelectApplication(ApplicationTypeEnum.Student)">
                         <img src="assets/images/brands/graduating-student.png" alt="student" class="me-2">
                         <span>Student</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.Parent)" (click)="onSelectApp(ApplicationTypeEnum.Parent)">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Parent)" (click)="onSelectApplication(ApplicationTypeEnum.Parent)">
                         <img src="assets/images/brands/family.png" alt="family" class="me-2">
                         <span>Parent</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.userApps.includes(ApplicationTypeEnum.Admin)" (click)="onSelectApp(ApplicationTypeEnum.Admin)">
+                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Admin)" (click)="onSelectApplication(ApplicationTypeEnum.Admin)">
                         <img src="assets/images/brands/system-administrator.png" alt="Admin" class="me-2">
                         <span>Admin</span>
                     </button>
