--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -127,42 +127,33 @@
 <!-- end auth-page-wrapper -->
 
 <ng-template #selectInstitutionContent role="document" let-modal>
-    <div class="modal-header p-3 bg-info-subtle">
+    <div class="modal-header p-3 bg-primary-subtle">
         <h5 class="modal-title" id="exampleModalLabel">Select Institution</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectInstitutionModal()" ></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
-        <div class="modal-body">
-        @for (institution of institutions; track $index) {
-                    <div class="col-12">
-                        <div class="card g-2">
-                            <div class="card-body">
-                                <div class="d-lg-flex align-items-center">
-                                    <div class="flex-shrink-0">
-                                         <div><a href="javascript:void(0);" class="btn btn-ghost-success btn-icon custom-toggle active" data-bs-toggle="button"></a></div>
-                                    </div>
-                                    <div class="ms-lg-3 my-3 my-lg-0">
-                                        <h5 class="fs-16 mb-2 text-break">{{institution.name}}</h5>
-                                        <p class="text-muted mb-0 text-break">{{institution.code}}</p>
-                                    </div>
-                                    <div class="d-flex gap-4 mt-0 text-muted mx-auto"></div>
-                                    <div class="d-flex gap-1 mt-0 "><a href="javascript:void(0);" class="btn btn-soft-primary w-100" (click)="onSelectInstitution(institution)">Select</a></div>
-                                </div>
-                            </div>
-                        </div>
-                  </div>
-                }
+        <div class="col-12">
+            <div class="mb-4">
+                <p class="text-muted"><code>Multiple institutions found.</code> Please select a default institution. You can always change it later.</p>
+                <ng-select class="w-100" [(ngModel)]="selectedInstitution">
+                    <ng-option *ngFor="let institution of institutions" [value]="institution">{{institution.name}}({{institution.code}})</ng-option>
+                </ng-select>
+            </div>
+            <div class="mb-4">
+                <button type="button" class="btn btn-soft-primary w-100" [disabled]="!selectedInstitution" (click)="onSelectInstitutionContinue()">Continue  <i class="ri-arrow-right-s-line"></i></button>
             </div>
         </div>
+    </div>
 </ng-template>
 
 <ng-template #selectAppContent role="document" let-modal>
-    <div class="modal-header p-3 bg-info-subtle">
+    <div class="modal-header p-3 bg-primary-subtle">
         <h5 class="modal-title" id="exampleModalLabel">Select Application</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectApplicationModal()" ></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
         <div class="p-2">
+            <p class="text-muted"><code>Multiple applications Found.</code> Please select a default application. You can always change it later.</p>
             <div class="row g-2">
                 <div class="col-12 col-lg-6">
                     <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.School)" (click)="onSelectApplication(ApplicationTypeEnum.School)">
