style: Update button styles to use primary theme in login component

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -140,7 +140,7 @@
                 </ng-select>
             </div>
             <div class="mb-4">
-                <button type="button" class="btn btn-soft-primary w-100" [disabled]="!selectedInstitution" (click)="onSelectInstitutionContinue()">Continue  <i class="ri-arrow-right-s-line"></i></button>
+                <button type="button" class="btn btn-primary w-100" [disabled]="!selectedInstitution" (click)="onSelectInstitutionContinue()">Continue  <i class="ri-arrow-right-s-line"></i></button>
             </div>
         </div>
     </div>
@@ -156,25 +156,25 @@
             <p class="text-muted"><code>Multiple applications Found.</code> Please select a default application. You can always change it later.</p>
             <div class="row g-2">
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.School)" (click)="onSelectApplication(ApplicationTypeEnum.School)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.School)" (click)="onSelectApplication(ApplicationTypeEnum.School)">
                         <img src="assets/images/brands/school.png" alt="school" class="me-2">
                         <span>School</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6" >
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Student)" (click)="onSelectApplication(ApplicationTypeEnum.Student)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Student)" (click)="onSelectApplication(ApplicationTypeEnum.Student)">
                         <img src="assets/images/brands/graduating-student.png" alt="student" class="me-2">
                         <span>Student</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Parent)" (click)="onSelectApplication(ApplicationTypeEnum.Parent)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Parent)" (click)="onSelectApplication(ApplicationTypeEnum.Parent)">
                         <img src="assets/images/brands/family.png" alt="family" class="me-2">
                         <span>Parent</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-soft-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Admin)" (click)="onSelectApplication(ApplicationTypeEnum.Admin)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Admin)" (click)="onSelectApplication(ApplicationTypeEnum.Admin)">
                         <img src="assets/images/brands/system-administrator.png" alt="Admin" class="me-2">
                         <span>Admin</span>
                     </button>
