--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -161,7 +161,7 @@
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">TaskBoard</span></a>
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-help-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Help</span></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-school-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Create</span></a>
+                        <a class="dropdown-item" routerLink="/general/institution"><i class="mdi mdi-school-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Create</span></a>
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Settings</span></a>
                         <a class="dropdown-item" href="javascript: void(0);" (click)="logout()"><i class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span class="align-middle" data-key="t-logout">Logout</span></a>
                     </div>
