--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -1,1 +1,112 @@
 <app-breadcrumbs title="Institutions" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card" id="institutionList">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div><h5 class="card-title mb-0">Institution List</h5></div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Institution</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body border-bottom-dashed border-bottom">
+                <div class="row g-3">
+                    <div class="col-xl-6">
+                        <div class="search-box">
+                            <input type="text" name="searchTerm" class="form-control" placeholder="Search for name, code, status or something..." [(ngModel)]="searchTerm" (ngModelChange)="performSearch()">
+                            <i class="ri-search-line search-icon"></i>
+                        </div>
+                    </div>
+                    <!--end col-->
+                </div>
+                <!--end row-->
+            </div>
+            <div class="card-body">
+                <div>
+                    <div class="table-responsive table-card mb-1">
+                        <table class="table">
+                            <thead class="table-light text-muted">
+                                <tr>
+                                    <th class="sort" (click)="onSort('code')">Code</th>
+                                    <th class="sort" (click)="onSort('name')">Name</th>
+                                    <th class="sort" (click)="onSort('isActive')">Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @for( data of institutionListCopy; track $index){
+                                <tr id="c_{{data.id}}">
+                                    <td>
+                                        <ngb-highlight [result]="data.code" [term]="searchTerm">
+                                        </ngb-highlight>
+                                    </td>
+                                    <td>
+                                        <ngb-highlight [result]="data.name" [term]="searchTerm">
+                                        </ngb-highlight>
+                                    </td>
+                                    <td class="status"><span class="badge text-uppercase" [ngClass]=" { 'bg-success-subtle text-success': data.status == true, 'bg-danger-subtle text-danger': data.status != true }">{{data.status}}</span>
+                                    </td>
+                                </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="row justify-content-md-between align-items-md-center">
+                        <div class="col col-sm-5">
+                            <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
+                                Showing {{service.startIndex}} to {{service.endIndex}} of {{institutionList?.length}} entries
+                            </div>
+                        </div>
+                        <!-- Pagination -->
+                        <div class="col col-sm-5">
+                            <div class="text-sm-right float-sm-end listjs-pagination">
+                                <ngb-pagination [collectionSize]="institutionList?.length" [(page)]="service.page" [pageSize]="service.pageSize" (pageChange)="changePage()">
+                                </ngb-pagination>
+                            </div>
+                        </div>
+                        <!-- End Pagination -->
+                    </div>
+                </div>
+
+                <!-- Institution Create Model -->
+                <ng-template #content role="document" let-modal>
+                    <div class="modal-header bg-light p-3">
+                        <h5 class="modal-title" id="exampleModalLabel">Create Institution</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')"></button>
+                    </div>
+                    <form (ngSubmit)="saveInstitution()" [formGroup]="institutionForm" class="tablelist-form" autocomplete="off">
+                        <div class="modal-body">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Institution Name</label>
+                                <input type="text" id="name" class="form-control" placeholder="Enter Institution Name" required formControlName="name" [ngClass]="{ 'is-invalid': submitted && form['name'].errors }" />
+                                <div class="invalid-feedback">Please enter an institution name</div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="hstack gap-2 justify-content-end">
+                                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="closeCreateInstitutionModal()">Cancel</button>
+                                <button type="submit" class="btn btn-primary" id="add-btn">Create</button>
+                            </div>
+                        </div>
+                    </form>
+                </ng-template>
+                <!--End Modal -->
+  
+                <div id="elmLoader" *ngIf="loading">
+                    <div class="spinner-border text-primary avatar-sm" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    <!--end col-->
+</div>
+<!--end row-->
