feat: Enhance institution handling by saving institution data on login and updating footer to display institution code

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -4,11 +4,11 @@
             <div class="col-sm-6">
                {{year}} © INSPIRE (v1.0.0)
             </div>
-            <!-- <div class="col-sm-6">
-                <div class="text-sm-end d-none d-sm-block">
-                    Powered by ByteCreed
+            <div class="col-sm-6">
+                <div class="text-sm-end d-none d-sm-block" style="color: #364574;">
+                    {{institution.code}}
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </footer>
