feat: Update institution component title to include icon and change text to 'My Institutions'

--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -6,7 +6,7 @@
             <div class="card-header border-bottom-dashed">
                 <div class="row g-4 align-items-center">
                     <div class="col-sm">
-                        <!-- <div><h5 class="card-title mb-0">Institution List</h5></div> -->
+                        <div><h5 class="card-title mb-0"><i class="bx bxs-school text-muted fs-18 align-middle me-1">     </i>My Institutions</h5></div>
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
