--- a/src/app/pages/school/configuration/school/school.component.html
+++ b/src/app/pages/school/configuration/school/school.component.html
@@ -133,8 +133,13 @@
             <div class="card-body col-lg-12">
                 <div class="hstack gap-2 justify-content-end">
                     <button type="submit" class="btn btn-primary" (click)="onSubmit()">Save</button>
-                    <button type="button" class="btn btn-soft-warning">Cancel</button>
                 </div>
+            </div>
+        </div>
+
+        <div id="elmLoader" *ngIf="loading">
+            <div class="spinner-border text-primary avatar-sm" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
         </div>
 
